--- a/src/app/testmodule/test.component.html
+++ b/src/app/testmodule/test.component.html
@@ -1,2 +1,3 @@
 <h1 style="color: Green">Test component !</h1>
+<input type="text" [appValidateEqual]="test" [(ngModel)]="keyCard" name="">
 <p> {{ keyCard }}  </p>
